# ros-bag-migration

./: .pre-commit-config.yaml  CMakeLists.txt  LICENSE.md  README.md  package.xml  setup.py
data/: test.bag
scripts/: migrate_bag.py
src/bag_migration/: __init__.py  base_rule.py  examples_rule.py
